--- a/deploy/docker/Database/Dockerfile
+++ b/deploy/docker/Database/Dockerfile
@@ -1,7 +1,9 @@
 FROM mongo
 
-MAINTAINER juliens@microsoft.com
+MAINTAINER javierms5@hotmail.com
 
-COPY drop/* /tmp/
+#/data/db será el volumen usado para persistencia de sesión
+COPY drop/* usr/local/data/db/
 
+#CMD es lo mismo que ENTRYPOINT pero con otro formato
 CMD ["mongod", "--smallfiles", "--rest"]
